--- a/app/src/CSS/Header.css
+++ b/app/src/CSS/Header.css
@@ -58,6 +58,7 @@
   }
 
   .nav_inputs .input_search {
+    background-color: white;
     border: 2px rgb(207, 207, 207) solid;
     border-radius: 40px;
     width: 250px;
