--- a/app/src/CSS/Header.css
+++ b/app/src/CSS/Header.css
@@ -15,6 +15,7 @@
     background-color: var(--headerColor);
     display: flex;
     align-items: center;
+    position: relative;
   }
 
   .nav_logo {
