--- a/app/src/CSS/Main.css
+++ b/app/src/CSS/Main.css
@@ -8,17 +8,15 @@
 }
 
 html,
-body {
+body,
+#root {
   min-height: 100%;
-}
-
-body {
-  height: 100%;
+  margin: 0;
 }
 
 .main {
   width: 100%;
-  height: 100%;
+  height: auto;
   background-color: #f3f3f3;
   position: relative;
 }
@@ -32,12 +30,13 @@ body {
 .article_container {
   background-color: white;
   margin: 0 20%;
-  position: absolute;
-  top: 300px;
+  position: relative;
   border-radius: 20px;
   box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.6);
   padding: 50px;
   height: auto;
+  z-index: 3;
+  transform: translateY(-250px);
 }
 
 .article_header {
